Add quotes to withName selectors in modules config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -65,7 +65,7 @@ process {
         ]
     }
 
-    withName: GFFREAD {
+    withName: 'GFFREAD' {
         ext.args   = '--keep-exon-attrs -F -T'
         publishDir = [
             path: { "${params.outdir}/genome" },
@@ -75,7 +75,7 @@ process {
         ]
     }
 
-    withName: GTF2BED {
+    withName: 'GTF2BED' {
         publishDir = [
             path: { "${params.outdir}/genome" },
             mode: 'copy',
@@ -84,7 +84,7 @@ process {
         ]
     }
 
-    withName: CUSTOM_GETCHROMSIZES {
+    withName: 'CUSTOM_GETCHROMSIZES' {
         publishDir = [
             path: { "${params.outdir}/genome" },
             mode: 'copy',
@@ -93,7 +93,7 @@ process {
         ]
     }
 
-    withName: GENOME_BLACKLIST_REGIONS {
+    withName: 'GENOME_BLACKLIST_REGIONS' {
         publishDir = [
             path: { "${params.outdir}/genome" },
             mode: 'copy',
@@ -175,7 +175,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/samtools" },
             mode: 'copy',
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename } // CHECK
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -191,7 +191,7 @@ process {
 
 if (params.aligner == 'bwa') {
     process {
-        withName: BWA_MEM {
+        withName: 'BWA_MEM' {
             ext.args   = [
                             '-M',
                             params.bwa_min_score ? " -T ${params.bwa_min_score}" : ''
@@ -257,7 +257,7 @@ if (params.aligner == 'star') {
 }
 
 process {
-    withName: PICARD_MERGESAMFILES {
+    withName: 'PICARD_MERGESAMFILES' {
         ext.args   = 'SORT_ORDER=coordinate VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
         ext.prefix = { "${meta.id}.mLb.sorted" }
         publishDir = [
@@ -302,7 +302,7 @@ process {
         ]
     }
 
-    withName: BAM_FILTER {
+    withName: 'BAM_FILTER' {
         ext.prefix = { "${meta.id}.mLb.flT.sorted" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary" },
@@ -312,7 +312,7 @@ process {
         ]
     }
 
-    withName: BAM_REMOVE_ORPHANS {
+    withName: 'BAM_REMOVE_ORPHANS' {
         ext.args   = '--only_fr_pairs'
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
@@ -349,7 +349,7 @@ process {
         ]
     }
 
-    withName: PHANTOMPEAKQUALTOOLS {
+    withName: 'PHANTOMPEAKQUALTOOLS' {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
@@ -358,7 +358,7 @@ process {
         ]
     }
 
-    withName: MULTIQC_CUSTOM_PHANTOMPEAKQUALTOOLS {
+    withName: 'MULTIQC_CUSTOM_PHANTOMPEAKQUALTOOLS' {
         publishDir = [
             path: { "${params.outdir}/${params.aligner}/mergedLibrary/phantompeakqualtools" },
             mode: 'copy',
@@ -366,7 +366,7 @@ process {
         ]
     }
 
-    withName: BEDTOOLS_GENOMECOV {
+    withName: 'BEDTOOLS_GENOMECOV' {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             [
@@ -382,7 +382,7 @@ process {
         ]
     }
 
-    withName: UCSC_BEDGRAPHTOBIGWIG {
+    withName: 'UCSC_BEDGRAPHTOBIGWIG' {
         ext.prefix = { "${meta.id}.mLb.clN" }
         publishDir = [
             [
@@ -396,7 +396,7 @@ process {
 
 if (!params.skip_picard_metrics) {
     process {
-        withName: PICARD_COLLECTMULTIPLEMETRICS {
+        withName: 'PICARD_COLLECTMULTIPLEMETRICS' {
             ext.args   = 'VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
             ext.prefix = { "${meta.id}.mLb.clN.sorted" }
             publishDir = [
@@ -417,7 +417,7 @@ if (!params.skip_picard_metrics) {
 
 if (!params.skip_preseq) {
     process {
-        withName: PRESEQ_LCEXTRAP {
+        withName: 'PRESEQ_LCEXTRAP' {
             ext.args   = '-verbose -bam -seed 1'
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
@@ -450,7 +450,7 @@ if (!params.skip_plot_profile) {
             ]
         }
 
-        withName: DEEPTOOLS_PLOTHEATMAP {
+        withName: 'DEEPTOOLS_PLOTHEATMAP' {
             ext.prefix = { "${meta.id}.mLb.clN" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/mergedLibrary/deeptools/plotProfile" },
@@ -463,7 +463,7 @@ if (!params.skip_plot_profile) {
 
 if (!params.skip_plot_fingerprint) {
     process {
-        withName: DEEPTOOLS_PLOTFINGERPRINT {
+        withName: 'DEEPTOOLS_PLOTFINGERPRINT' {
             ext.args   = [
                 '--skipZeros',
                 "--numberOfSamples $params.fingerprint_bins"
@@ -498,7 +498,7 @@ if (params.macs_gsize) {
             ]
         }
 
-        withName: FRIP_SCORE {
+        withName: 'FRIP_SCORE' {
             ext.args   = '-bed -c -f 0.20'
             publishDir = [
                 path: { [
@@ -510,7 +510,7 @@ if (params.macs_gsize) {
             ]
         }
 
-        withName: MULTIQC_CUSTOM_PEAKS {
+        withName: 'MULTIQC_CUSTOM_PEAKS' {
             publishDir = [
                 path: { [
                     "${params.outdir}/${params.aligner}/mergedLibrary/macs2",
@@ -525,7 +525,7 @@ if (params.macs_gsize) {
 
     if (!params.skip_peak_annotation && !params.skip_peak_qc) {
         process {
-            withName: PLOT_MACS2_QC {
+            withName: 'PLOT_MACS2_QC' {
                 ext.args   = '-o ./ -p macs2_peak'
                 publishDir = [
                     path: { [
@@ -538,7 +538,7 @@ if (params.macs_gsize) {
                 ]
             }
 
-            withName: HOMER_ANNOTATEPEAKS_MACS2 {
+            withName: 'HOMER_ANNOTATEPEAKS_MACS2' {
                 ext.args   = '-gid'
                 // ext.prefix = 'peaks'
                 publishDir = [
@@ -551,7 +551,7 @@ if (params.macs_gsize) {
                 ]
             }
 
-            withName: PLOT_HOMER_ANNOTATEPEAKS {
+            withName: 'PLOT_HOMER_ANNOTATEPEAKS' {
                 ext.args   = '-o ./ -p macs2_annotatePeaks'
                 publishDir = [
                     path: { [
@@ -568,7 +568,7 @@ if (params.macs_gsize) {
 
     if (!params.skip_consensus_peaks) {
         process {
-            withName: MACS2_CONSENSUS {
+            withName: 'MACS2_CONSENSUS' {
                 ext.prefix = { "${meta.id}.consensus_peaks" }
                 publishDir = [
                     path: { [
@@ -581,7 +581,7 @@ if (params.macs_gsize) {
                 ]
             }
 
-            withName: SUBREAD_FEATURECOUNTS  {
+            withName: 'SUBREAD_FEATURECOUNTS'  {
                 ext.args   = '-F SAF -O --fracOverlap 0.2'
                 publishDir = [
                     path: { [
@@ -598,7 +598,7 @@ if (params.macs_gsize) {
 
     if (!params.skip_peak_annotation) {
         process {
-            withName: HOMER_ANNOTATEPEAKS_CONSENSUS {
+            withName: 'HOMER_ANNOTATEPEAKS_CONSENSUS' {
                 ext.args   = '-gid'
                 ext.prefix = 'consensus_peaks'
                 publishDir = [
@@ -632,7 +632,7 @@ if (params.macs_gsize) {
 
     if (!params.skip_igv) {
         process {
-            withName: IGV {
+            withName: 'IGV' {
                 publishDir = [
                         path: { [
                             "${params.outdir}/igv",
@@ -648,7 +648,7 @@ if (params.macs_gsize) {
 
 if (!params.skip_multiqc) {
     process {
-        withName: MULTIQC {
+        withName: 'MULTIQC' {
             ext.args   = params.multiqc_title ? "--title \"$params.multiqc_title\"" : ''
             publishDir = [
                 path: { [
