Update blacklists when new versions are available

--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -22,7 +22,7 @@ params {
             readme      = "${params.igenomes_base}/Homo_sapiens/Ensembl/GRCh37/Annotation/README.txt"
             mito_name   = "MT"
             macs_gsize  = "2.7e9"
-            blacklist   = "${projectDir}/assets/blacklists/GRCh37-blacklist.bed"
+            blacklist   = "${projectDir}/assets/blacklists/v1.0/GRCh37-blacklist.bed"
         }
         'GRCh38' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa"
@@ -34,7 +34,7 @@ params {
             bed12       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
             macs_gsize  = "2.7e9"
-            blacklist   = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
+            blacklist   = "${projectDir}/assets/blacklists/v3.0/GRCh38_unified_blacklist.v3.bed"
         }
         'GRCm38' {
             fasta       = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Sequence/WholeGenomeFasta/genome.fa"
@@ -47,7 +47,7 @@ params {
             readme      = "${params.igenomes_base}/Mus_musculus/Ensembl/GRCm38/Annotation/README.txt"
             mito_name   = "MT"
             macs_gsize  = "1.87e9"
-            blacklist   = "${projectDir}/assets/blacklists/GRCm38-blacklist.bed"
+            blacklist   = "${projectDir}/assets/blacklists/v1.0/GRCm38-blacklist.bed"
         }
         'TAIR10' {
             fasta       = "${params.igenomes_base}/Arabidopsis_thaliana/Ensembl/TAIR10/Sequence/WholeGenomeFasta/genome.fa"
@@ -281,7 +281,7 @@ params {
             bed12       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
             macs_gsize  = "2.7e9"
-            blacklist   = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
+            blacklist   = "${projectDir}/assets/blacklists/v2.0/hg38-blacklist.v2.bed"
         }
         'hg19' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Sequence/WholeGenomeFasta/genome.fa"
@@ -294,7 +294,7 @@ params {
             readme      = "${params.igenomes_base}/Homo_sapiens/UCSC/hg19/Annotation/README.txt"
             mito_name   = "chrM"
             macs_gsize  = "2.7e9"
-            blacklist   = "${projectDir}/assets/blacklists/hg19-blacklist.bed"
+            blacklist   = "${projectDir}/assets/blacklists/v2.0/hg19-blacklist.v2.bed"
         }
         'mm10' {
             fasta       = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Sequence/WholeGenomeFasta/genome.fa"
@@ -307,7 +307,7 @@ params {
             readme      = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Annotation/README.txt"
             mito_name   = "chrM"
             macs_gsize  = "1.87e9"
-            blacklist   = "${projectDir}/assets/blacklists/mm10-blacklist.bed"
+            blacklist   = "${projectDir}/assets/blacklists/v2.0/mm10-blacklist.v2.bed"
         }
         'bosTau8' {
             fasta       = "${params.igenomes_base}/Bos_taurus/UCSC/bosTau8/Sequence/WholeGenomeFasta/genome.fa"
@@ -330,6 +330,7 @@ params {
             readme      = "${params.igenomes_base}/Caenorhabditis_elegans/UCSC/ce10/Annotation/README.txt"
             mito_name   = "chrM"
             macs_gsize  = "9e7"
+            blacklist   = "${projectDir}/assets/blacklists/v2.0/ce10-blacklist.v2.bed"
         }
         'canFam3' {
             fasta       = "${params.igenomes_base}/Canis_familiaris/UCSC/canFam3/Sequence/WholeGenomeFasta/genome.fa"
@@ -363,6 +364,7 @@ params {
             bed12       = "${params.igenomes_base}/Drosophila_melanogaster/UCSC/dm6/Annotation/Genes/genes.bed"
             mito_name   = "chrM"
             macs_gsize  = "1.2e8"
+            blacklist   = "${projectDir}/assets/blacklists/v2.0/dm6-blacklist.v2.bed"
         }
         'equCab2' {
             fasta       = "${params.igenomes_base}/Equus_caballus/UCSC/equCab2/Sequence/WholeGenomeFasta/genome.fa"
