--- a/.editorconfig
+++ b/.editorconfig
@@ -26,5 +26,5 @@ indent_size = unset
 [/assets/email*]
 indent_size = unset
 
-[/assets/blacklists/GRCh37-blacklist.bed]
+[/assets/blacklists/v1.0/GRCh37-blacklist.bed]
 trim_trailing_whitespace = unset
