Change param skip_diff_analysis by skip_deseq2_qc

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -614,7 +614,7 @@ if (params.macs_gsize) {
         }
     }
 
-    if (!params.skip_diff_analysis) {
+    if (!params.skip_deseq2_qc) {
         process {
             withName: DESEQ2_QC {
                 ext.args   = [
