--- a/nextflow.config
+++ b/nextflow.config
@@ -49,9 +49,9 @@ params {
     skip_peak_annotation       = false
     skip_consensus_peaks       = false
 
-    // Options: Differential analysis
+    // Options: DESeq2 QC
     deseq2_vst                 = false
-    skip_diff_analysis         = false
+    skip_deseq2_qc             = false
 
     // Options: QC
     skip_qc                    = false
