--- a/nextflow.config
+++ b/nextflow.config
@@ -44,6 +44,8 @@ params {
   skip_peak_qc = false
   skip_peak_annotation = false
   skip_consensus_peaks = false
+  nomodel = true
+  extsize = 147
 
   // Options: Differential analysis
   deseq2_vst = false
