Template update for nf-core/tools version 2.2

--- a/nextflow.config
+++ b/nextflow.config
@@ -154,7 +154,7 @@ dag {
 
 manifest {
     name            = 'nf-core/chipseq'
-    author          = 'Philip Ewels'
+    author          = 'Philip Ewels, Jose Espinosa-Carrasco, Harshil Patel'
     homePage        = 'https://github.com/nf-core/chipseq'
     description     = 'ChIP-seq peak-calling and differential analysis pipeline.'
     mainScript      = 'main.nf'
