--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -3,7 +3,12 @@ lint:
     - .markdownlint.yml
     - assets/email_template.html
     - assets/email_template.txt
-    - lib/NfcoreTemplate.groovy
     - assets/multiqc_config.yaml
+    - lib/NfcoreTemplate.groovy
+    - lib/NfcoreSchema.groovy
+    - .github/ISSUE_TEMPLATE/bug_report.yml
+    - .github/workflows/branch.yml
+    - .github/workflows/linting_comment.yml
+    - .github/workflows/linting.yml
 
 repository_type: pipeline
