Update modules and small fixes due to update

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -196,7 +196,7 @@ if (params.aligner == 'bwa') {
                             '-M',
                             params.bwa_min_score ? " -T ${params.bwa_min_score}" : ''
                         ].join(' ').trim()
-            ext.args2  = '-h -F 0x0100 -O BAM'
+            ext.args2  = '-bhS -F 0x0100 -O BAM'
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
