--- a/nextflow.config
+++ b/nextflow.config
@@ -74,7 +74,7 @@ params {
     max_multiqc_email_size     = '25.MB'
 
     // Boilerplate options
-    outdir                     = './results'
+    outdir                     = null
     tracedir                   = "${params.outdir}/pipeline_info"
     publish_dir_mode           = 'copy'
     email                      = null
