--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -10,5 +10,6 @@ lint:
     - .github/workflows/branch.yml
     - .github/workflows/linting_comment.yml
     - .github/workflows/linting.yml
+    - .github/PULL_REQUEST_TEMPLATE.md
 
 repository_type: pipeline
