--- a/conf/test.config
+++ b/conf/test.config
@@ -20,7 +20,9 @@ params {
     max_time = 6.h
 
     // Input data
-    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
+    // input = 'https://raw.githubusercontent.com/nf-core/test-datasets/chipseq/samplesheet/v2.0/samplesheet_test.csv'
+    // TODO update test data with new sample sheet once is developed
+    input = './assets/replicates_test_DELETE_ME.csv'
 
     // Genome references
     fasta = 'https://raw.githubusercontent.com/nf-core/test-datasets/atacseq/reference/genome.fa'
