--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -4,3 +4,4 @@ lint:
     - .github/workflows/branch.yml
     - .github/workflows/linting_comment.yml
     - .github/workflows/linting.yml
+    - .github/PULL_REQUEST_TEMPLATE.md
