Apply review suggestions

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -233,10 +233,7 @@ if (params.aligner == 'chromap') {
             ]
         }
         withName: CHROMAP_CHROMAP {
-            ext.args   = [
-                            '--preset chip',
-                            '--SAM'
-                        ].join(' ').trim()
+            ext.args   = '--preset chip --SAM'
             ext.prefix = { "${meta.id}.Lb" }
             publishDir = [
                 path: { "${params.outdir}/${params.aligner}/library" },
